# beacon-proj

./: pyproject.toml  pyrightconfig.json
beacon_proj/: main.py
tests/: test_main.py
